# hidden_agenda_pedal

./: .gitignore  CMakeLists.txt  README.md
.docs/faq/: README.md
.docs/usage/: README.md
circuitpython/: README.md
circuitpython/midi_controller/: README.md  code.py
circuitpython/test_script/: README.md  code.py
enclosure/: README.md
firmware/: CMakeLists.txt  README.md
firmware/common/: CMakeLists.txt  repl.cpp
firmware/common/include/: custom_hid.hpp  hid_fx.hpp  hid_output.hpp  persistence.hpp  repl.hpp  util.h
firmware/common/include/kbd_fx/: kbd_fx_delay.hpp  kbd_fx_harmonizer.hpp  kbd_fx_passthrough.hpp  kbd_fx_tremolo.hpp  kbd_fx_xover.hpp
firmware/common/include/mouse_fx/: mouse_fx_fuzz.hpp  mouse_fx_looper.hpp  mouse_fx_passthrough.hpp  mouse_fx_reverb.hpp  mouse_fx_xover.hpp
firmware/src/: CMakeLists.txt  custom_hid.hpp  ha_board.h  hidden_agenda.cpp  i2c_persistence.cpp  i2c_persistence.hpp  persistence.cpp  persistence.h  repl.h  tud_callbacks.cpp  tud_hid_output.hpp  tusb_config.h  usb_descriptors.cpp  usb_descriptors.h  util.cpp  util.h
firmware/src/kbd_fx/: kbd_fx_passthrough.hpp
firmware/src/mouse_fx/: mouse_fx_fuzz.hpp  mouse_fx_looper.hpp  mouse_fx_passthrough.hpp  mouse_fx_xover.hpp
firmware/test/: CMakeLists.txt  main.cpp  test_hid_output.hpp  test_persistence.hpp  test_util.hpp
hardware/: README.md  hidden_agenda.kicad_pcb  hidden_agenda.kicad_prl  hidden_agenda.kicad_pro  hidden_agenda.kicad_sch  usb_caps_v6.stl
src/: CMakeLists.txt  capsizer.cpp  custom_hid.hpp  hidden_agenda.cpp  persistence.cpp  persistence.h  serial_num.h  tusb_config.h  usb_descriptors.c  util.h  ws2812.pio
src/kbd_fx/: kbd_fx_delay.hpp  kbd_fx_harmonizer.hpp  kbd_fx_passthrough.hpp  kbd_fx_tremolo.hpp
src/mouse_fx/: mouse_fx_fuzz.hpp  mouse_fx_passthrough.hpp  mouse_fx_reverb.hpp
